--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="jumbotron">
                 <h1 class="text-center">Train Schedule</h1>
-                <h3 class="text-center">Choo Choo Muh Fuh!</h3>
+                <h3 class="text-center">Choo Choo!</h3>
             </div>
     
             <div class="row">
@@ -32,7 +32,7 @@
                             <th>Train Name</th>
                             <th>Destination</th>
                             <th>Frequency (min)</th>
-                            <th id="arrival">Next Arrival</th>
+                            <th>Next Arrival</th>
                             <th>Minutes Away</th>
                         </tr>
                     </thead>
@@ -58,7 +58,7 @@
                                     <input type="text" class="form-control" id="train-destination" placeholder="Over The Mountain" required/>
                                 </div>
                                 <div class="form-group row">
-                                    <label for="first-train-time">First Train (HH:mm:AM/PM)</label>
+                                    <label for="first-train-time">First Train (HH:mm - military time)</label>
                                     <input type="time" class="form-control" id="first-train-time" placeholder="00:00" required/>
                                 </div> 
                                 <div class="form-group row">
