--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
 </head>
 
 <body>
-        <div class="container">
-            <div class="jumbotron">
-                <h1 class="text-center">Train Schedule</h1>
-                <h3 class="text-center">Choo Choo!</h3>
-            </div>
-    
-            <div class="row">
-                <h4>Current Train Schedyle</h4>
-                <table class="table table-striped">
+    <div class="container">
+        <div class="jumbotron">
+            <h1 class="text-center">Train Schedule</h1>
+            <h3 class="text-center">Choo Choo!</h3>
+        </div>
+
+        <div class="row display-schedule">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <h4>Current Train Schedule</h4>
+                <table class="table">
                     <thead>
                         <tr>
                             <th>Train Name</th>
@@ -40,38 +41,34 @@
                     </tbody>
                 </table>
             </div>
-            
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="row">
-                        <h4>Trains!</h4>
+        </div>
+
+
+        <div class="row train-info">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+            <h4>Trains!</h4>
+                <form>
+                    <div class="form-group row">
+                        <label for="train-name">Train Name</label>
+                        <input type="text" class="form-control" id="train-name" placeholder="The Little Engine That Could" required/>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-12 col-md-8 col-lg-6">
-                            <form>
-                                <div class="form-group row">
-                                    <label for="train-name">Train Name</label>
-                                    <input type="text" class="form-control" id="train-name" placeholder="The Little Engine That Could" required/>
-                                </div>
-                                <div class="form-group row">
-                                    <label for="train-destination">Destination</label>
-                                    <input type="text" class="form-control" id="train-destination" placeholder="Over The Mountain" required/>
-                                </div>
-                                <div class="form-group row">
-                                    <label for="first-train-time">First Train (HH:mm - military time)</label>
-                                    <input type="time" class="form-control" id="first-train-time" placeholder="00:00" required/>
-                                </div> 
-                                <div class="form-group row">
-                                    <label for="departure-frequency">Frequency Time (min)</label>
-                                    <input type="text" class="form-control" id="departure-frequency" placeholder="60" required/>
-                                </div>  
-                                <button class="btn btn-primary" id="add-train" type="submit">Add Train</button>
-                            </form>
-                        </div> 
+                    <div class="form-group row">
+                        <label for="train-destination">Destination</label>
+                        <input type="text" class="form-control" id="train-destination" placeholder="Over The Mountain" required/>
                     </div>
-                </div>
+                    <div class="form-group row">
+                        <label for="first-train-time">First Train (HHmm - military time)</label>
+                        <input type="number" class="form-control" id="first-train-time" placeholder="HHmm" required/>
+                    </div> 
+                    <div class="form-group row">
+                        <label for="departure-frequency">Frequency Time (min)</label>
+                        <input type="number" class="form-control" id="departure-frequency" placeholder="60" required/>
+                    </div>  
+                    <button class="btn btn-primary" id="add-train" type="submit">Add Train</button>
+                </form>
             </div>
         </div>
-    </body>
+    </div>
+</body>
 
 </html>
