--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="row train-info">
             <div class="col-lg-12 col-md-12 col-sm-12">
-            <h4>Trains!</h4>
+            <h4>Add Trains!</h4>
                 <form>
                     <div class="form-group row">
                         <label for="train-name">Train Name</label>
